--- a/app/static/css/main/amp_main.css
+++ b/app/static/css/main/amp_main.css
@@ -200,7 +200,9 @@ a.system-item:hover .ys-icon-systoggle{background-position: -74px -254px;}
 
 #page-frame{width:100%;height:100%;border:0;overflow: auto;}
 
-.header-right{position: absolute;width:32px;height:32px;border-radius:32px;background-color:#ccc;top:50%;right:40px;margin-top:-16px;}
+/*.header-right{position: absolute;width:32px;height:32px;border-radius:32px;background-color:#ccc;top:50%;right:40px;margin-top:-16px;}*/
+.header-right{ position: absolute; top: 0; right:40px; margin-top: 0; padding-left: 22px; width: inherit; height: 44px; line-height: 44px; background-color: transparent; }
+
 .ys-figure{display: block;position: absolute;
     top: 6px;left:0;width:32px;height:32px;border-radius:32px;background-image: url(../../images/main/figure.jpg);background-position: center center;background-repeat: no-repeat;background-size: contain;}
 
@@ -329,4 +331,12 @@ span#countdown .countdown-lastDay~em.unit{display: none;}
 
 .ys-amp .amp-loading>.loading-wrapper>.loading-ani{width:60px;height:60px;position: absolute;top:20px;left:50%;margin-left:-30px;}
 .ys-amp .amp-loading>.loading-wrapper>span{display: block;color:#fff;font-size:16px;text-align: center;height:44px;line-height: 44px;}
+
+
+#ys-user,#ys-logout{display:inline-block; position:relative;padding-left:20px;margin-left:20px;height:44px;line-height: 44px;color:#333;text-decoration: none;font-size: 14px;cursor:pointer;}
+#ys-user:before,#ys-logout:before{display:block;position: absolute;width:14px;height:16px;top:50%;margin-top:-8px;left:0;background-image: url(../../images/icon.png);background-position:-40px -290px; background-repeat: no-repeat; content:" ";}
+#ys-logout:before{background-position:-88px -290px;}
+#ys-user:hover,#ys-logout:hover{color:#e64e4d;}
+#ys-user:hover:before{background-position:-64px -290px;}
+#ys-logout:hover:before{background-position:-111px -290px;}
 
