--- a/app/static/css/views/datatools.css
+++ b/app/static/css/views/datatools.css
@@ -70,7 +70,7 @@
 
 #irr-plan .td-input-wrapper i.unit-addon{float:right;margin-left:5px;line-height: 22px;}
 #irr-plan .ys-table-static .table  tbody>tr>td{text-align:left;}
-#irr-plan .ys-table-static .table  tbody>tr>td>span{display: block;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
+#irr-plan .table  tbody>tr>td>span{display: block;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
 
 #irr-plan .table td input {
     display: none;
