--- a/amp_mobile/views/noi_analyse/noi.html
+++ b/amp_mobile/views/noi_analyse/noi.html
@@ -3,10 +3,15 @@
         Test
     </div>
 
-    <div class="btn-group pull-right" ui-yield-to="navbarAction">
+    <div class="btn-group pull-right">
         <div ui-toggle="uiSidebarRight" class="btn sidebar-right-toggle">
             <i class="navOpt-icon navOpt-icon-filter"></i>
         </div>
+    </div>
+</div>
+<div ui-content-for="pageHeader">
+    <div class="scrollable-header page-header" style="display: none">
+        noi header
     </div>
 </div>
 
