--- a/app/views/datatools/datatool_rpg_set_index.html
+++ b/app/views/datatools/datatool_rpg_set_index.html
@@ -46,7 +46,8 @@
     </div><!--ys-block-->
     <div class="amp-block-pd">
           <div class="btn-wrapper">
-            <a href="amp_main_solo.html?projectid={{curProject}}" class="btn btn-default amp-btn" target="_blank">推算</a>
+              <a href="amp_main_solo.html?projectid={{curProject}}#/rpgresult" class="btn btn-default amp-btn amp-btn-reverse" target="_blank">查看租金包</a>
+            <a href="amp_main_solo.html?projectid={{curProject}}" class="btn btn-default amp-btn" target="_blank" style="margin-left:13px;">推算</a>
         </div>
 
     </div>
