--- a/app/views/datatools/rpg_set.html
+++ b/app/views/datatools/rpg_set.html
@@ -677,7 +677,8 @@
     </div><!--end ys-block-->
     <div class="amp-block-pd bottom-block clearfix">
         <div class="btn-wrapper pull-right">
-            <a ng-disabled="rpgSetForm.$invalid" class="btn btn-default amp-btn ys-tips" id="btn-create" ng-click="sCtrl.setSave()" data-toggle="tooltip" data-placement="top"  title="我们将于12月15日开放使用" style="float:right;">生成租金包</a>
+            <a ng-disabled="rpgSetForm.$invalid" class="btn btn-default amp-btn ys-tips" id="btn-create" ng-click="sCtrl.setSave()" data-toggle="tooltip" data-placement="top"  title="我们将于12月15日开放使用" style="float:right;margin-left:20px;">生成租金包</a>
+            <a ng-disabled="rpgSetForm.$invalid" class="btn btn-default amp-btn amp-btn-reverse ys-tips" id="btn-save" ng-click="sCtrl.setData()" data-toggle="tooltip" data-placement="top"  title="我们将于12月15日开放使用" style="float:right;">保存</a>
         </div>
     </div>
 
