--- a/app/views/datatools/rpg_set.html
+++ b/app/views/datatools/rpg_set.html
@@ -52,6 +52,15 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <table class="table table-bordered amp-table table-hover table-header-fixed" style="width:1500px;" >
+                                <colgroup>
+                                    <col width="100px">
+                                    <col width="">
+                                    <col width="100px">
+                                    <col width="">
+                                    <col width="100px">
+                                    <col width="">
+
+                                </colgroup>
                                 <thead>
                                 <tr>
 
@@ -78,6 +87,7 @@
             <div class="ys-table-main" style="padding-left:302px;">
                 <div class="ys-table-static ys-table-static-left" style="width:302px;">
                     <table class="table table-bordered amp-table table-hover" style="width:100%;">
+
                         <tbody>
                         <tr>
                             <th class="td-fake"></th>
@@ -255,6 +265,15 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <table class="table table-bordered amp-table table-hover"  style="width:1500px;">
+                                <colgroup>
+                                    <col width="100px">
+                                    <col width="">
+                                    <col width="100px">
+                                    <col width="">
+                                    <col width="100px">
+                                    <col width="">
+
+                                </colgroup>
                                 <tbody>
                                 <tr>
                                     <td ng-repeat-start="project in sCtrl.rpgSetData.rentCount.affect_position[0].projects">
