--- a/app/views/datatools/rpg_set.html
+++ b/app/views/datatools/rpg_set.html
@@ -4,8 +4,8 @@
         <div class="amp-header-breadcrumb">
             <a href="#" class="amp-solo-close"></a>
             <ol class="breadcrumb">
-                <li><a ui-sref="rpgindex" href="#/rpgindex"  target="_parent">数据工具</a></li>
-                <li><a ui-sref="rpgindex" href="#/rpgindex"  target="_parent">租金包</a></li>
+                <li><a ui-sref="rpgindex"   target="_parent">数据工具</a></li>
+                <li><a ui-sref="rpgindex"  target="_parent">租金包</a></li>
                 <li class="active">设定</li>
             </ol>
         </div>
@@ -604,7 +604,36 @@
             <h3 class="col-xs-4">影响系数</h3>
         </div>
         <div class="amp-table-wrapper-swiper" id="rent-affect-area">
-            <h5 class="amp-sub-title">面积分解系数</h5>
+            <div class="amp-proportion-select clearfix">
+                <h5 class="amp-sub-title">面积分解系数</h5>
+                <div class="td-input-wrapper padding-r-15 select-input" >
+                    <label>Mall选择:</label>
+                    <input type="text" value="" hidden ng-model="sCtrl.shopInfo.mallProportionType"/>
+                    <div class="dropdown">
+                        <button class="btn dropdown-toggle" type="button" data-toggle="dropdown">
+                            <em>{{sCtrl.proportionType[sCtrl.shopInfo.mallProportionType] | default:"请选择"}}</em><span class="ys-icon ys-icon-dropdown"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
+                            <li ng-class="{'active':sCtrl.isActive(k,sCtrl.shopInfo.mallProportionType)}" role="presentation"
+                                ng-repeat="(k,v) in sCtrl.proportionType"><a role="menuitem" ng-click="sCtrl.setModel('mallProportionType',k)">{{v}}</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="td-input-wrapper padding-r-15 select-input" >
+                    <label>商业街选择:</label>
+                    <input type="text" value="" hidden ng-model="sCtrl.shopInfo.streetProportionType"/>
+                    <div class="dropdown">
+                        <button class="btn dropdown-toggle" type="button" data-toggle="dropdown">
+                            <em>{{sCtrl.proportionType[sCtrl.shopInfo.streetProportionType] | default:"请选择"}}</em><span class="ys-icon ys-icon-dropdown"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
+                            <li ng-class="{'active':sCtrl.isActive(k,sCtrl.shopInfo.streetProportionType)}" role="presentation"
+                                    ng-repeat="(k,v) in sCtrl.proportionType"><a role="menuitem" ng-click="sCtrl.setModel('streetProportionType',k)">{{v}}</a></li>
+                        </ul>
+                     </div>
+                </div>
+            </div>
+
             <div class="ys-table-main" style="padding-left:120px;">
 
                 <div class="ys-table-static ys-table-static-left" style="width:120px;">
